2.3
Fixed Issues:

JSON Parsing Error - Fixed messages.json loading crash with nested structure
Missing File Handling - Auto-creates messages.json if deleted or missing
Error Recovery - Better error handling for malformed JSON files
Fixed Event names not showing correctly
Added Features:

DoubleDrop event can now be changed inside the EventConfig.json (originally was hardcoded)